Initial preparation for 1.17